--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
   },
   "homepage": "https://github.com/xgqfrms/23-design-patterns-app#readme",
   "devDependencies": {
+    "app-node-env": "^1.3.4",
     "clean-webpack-plugin": "^3.0.0",
+    "emoji-element": "^1.0.1",
+    "flutter-app-cli": "^1.0.2",
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
