--- a/package.json
+++ b/package.json
@@ -1,24 +1,8 @@
 {
   "name": "23-design-patterns-app",
   "version": "1.0.0",
-  "description": "eletron desktop app",
+  "description": "electron desktop app",
   "main": "src/index.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "app-node-env": "^1.3.4",
-    "emoji-element": "^1.0.1",
-    "flutter-app-cli": "^1.0.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xgqfrms/23-design-patterns-app.git"
-  },
   "keywords": [
     "electron",
     "desktop",
@@ -26,6 +10,20 @@
   ],
   "author": "xgqfrms",
   "license": "MIT",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "start": "electron .",
+    "dev": "electron ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {},
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xgqfrms/23-design-patterns-app.git"
+  },
   "bugs": {
     "url": "https://github.com/xgqfrms/23-design-patterns-app/issues"
   },
