nrm => cnpm OK ✅

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {},
-  "dependencies": {},
+  "dependencies": {
+    "electron": "^10.1.5"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xgqfrms/23-design-patterns-app.git"
