--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,13 @@
     "statusBar.background": "#00b3e6",
     "statusBarItem.hoverBackground": "#008bb3",
     "statusBar.foreground": "#15202b",
-    "activityBar.activeBackground": "#1accff"
+    "activityBar.activeBackground": "#1accff",
+    "editorGroup.border": "#1accff",
+    "panel.border": "#1accff",
+    "sash.hoverBorder": "#1accff",
+    "sideBar.border": "#1accff",
+    "statusBarItem.remoteBackground": "#00b3e6",
+    "statusBarItem.remoteForeground": "#15202b"
   },
   "peacock.color": "#00b3e6",
   "editor.codeActionsOnSave": {
